syntax = "proto3";

import "IO/Network/Relay/Protos/Requests/PartyInviteRequest.proto";
import "IO/Network/Relay/Protos/Requests/PartyKickRequest.proto";
import "IO/Network/Relay/Protos/Requests/PartyAcceptRequest.proto";
import "IO/Network/Relay/Protos/Requests/PartyDeclineRequest.proto";
import "IO/Network/Relay/Protos/Requests/PartyLeaveRequest.proto";
import "IO/Network/Relay/Protos/Requests/PartyPassMasterRequest.proto";

import "IO/Network/Relay/Protos/Responses/PartyInviteResponse.proto";
import "IO/Network/Relay/Protos/Responses/PartyKickResponse.proto";
import "IO/Network/Relay/Protos/Responses/PartyAcceptResponse.proto";
import "IO/Network/Relay/Protos/Responses/PartyDeclineResponse.proto";
import "IO/Network/Relay/Protos/Responses/PartyLeaveResponse.proto";
import "IO/Network/Relay/Protos/Responses/PartyPassMasterResponse.proto";

option csharp_namespace = "ow.Framework.IO.Network.Relay.Protos";

package PartyHandler;

service PartyService {
    rpc Invite (PartyInviteRequest) returns (PartyInviteResponse);
    rpc Kick (PartyKickRequest) returns (PartyKickResponse);
    rpc Accept (PartyAcceptRequest) returns (PartyAcceptResponse);
    rpc Decline (PartyDeclineRequest) returns (PartyDeclineResponse);
    rpc Leave (PartyLeaveRequest) returns (PartyLeaveResponse);
    rpc PassMaster (PartyPassMasterRequest) returns (PartyPassMasterResponse);
}
