syntax = "proto3";

option csharp_namespace = "ow.Framework.IO.Network.Relay.Protos.Requests";

package PartyHandler;

message PartyAcceptRequest
{
    int32 Id = 1;
    int32 CharacterId = 2;
}
